---------------------
* SOLR-16490: `/admin/cores?action=backupcore` now has a v2 equivalent, available at
  `GET /api/cores/coreName/backups` (Sanjay Dutt via Jason Gerlowski)

* SOLR-16883: Postlogs tool for indexing Solr logs in Solr now supported on Windows by converting it to a Solr CLI command: `bin/solr postlogs`.   `bin/postlogs` script marked deprected.  (Eric Pugh, Will White)

Optimizations
---------------------

* SOLR-16845: BinaryResponseWriter should not attempt cast to Utf8CharSequence (Alex Deparvu via Houston Putman)


Bug Fixes
---------------------

* SOLR-16886: Don't commit multi-part uploads that have been aborted (Tomás Fernández Löbbe, Houston Putman)

* SOLR-16889: Rate Limiter should stop processing on 429 (Alex Deparvu, David Smiley)

* SOLR-16906: Correctly capture REPLICATION metrics in Prometheus config (Daisuke Aritomo via Houston Putman)

* SOLR-16905: Allow access to specified "solr.allowPaths" in Security Manager (daylicron, Houston Putman)

Dependency Upgrades
---------------------
(No changes)

Other Changes
---------------------

* SOLR-16842: Eliminate special case code in Solr CLI by introducing explicit VersionTool.java.  (Eric Pugh, Will White)

* SOLR-16856: The default auto-soft-commit time has been set to 3 seconds. Previously, auto-soft-commit was disabled by default. (Houston Putman)

* PR#1629: Fix typos in org.apache.solr.core package (Andrey Bozhko, Marcus Eagan)

* SOLR-16803: Remove dependencies on methods defined in the SimplePostTool from Solr core and solrj modules.

* SOLR-16915: Lower the AffinityPlacementPlugin's default minimalFreeDiskGB to 5 GB (Houston Putman)

* SOLR-6994: Implement Windows version of bin/post via implementing bin/solr post command that works on Windows and Unix.  Deprecate bin/post.  (Eric Pugh, Will White)

==================  9.3.0 ==================

Upgrade Notes
---------------------
